API Auth Activation User Part 1 Completed
