# src/controllers/auth.controller.ts
@@ -26,6 +26,9 @@ const RegisterValidateSchema = Yup.object({
 });
 export default {
     async register(req:Request, res:Response) {
+        /**
+         #swagger.tags = ["Auth"]
+         */
         const {
             fullName,
             username,
@@ -62,6 +65,7 @@ export default {
     },
     async login(req:Request, res:Response) {
         /**
+         #swagger.tags = ["Auth"]
          #swagger.requestBody = {
          required: true,
     content: {
@@ -122,6 +126,7 @@ export default {
     },
     async me(req:IReqUser, res:Response) {
         /**
+        #swagger.tags = ["Auth"]
          #swagger.security = [{
          "bearerAuth" :[]
     }]
